# Algebraic_Rubiks_Cube_Solver

./: Annealing_layout_sticker_search.ipynb  CMakeLists.txt
include/: automaton_compiler.hpp  cli.hpp  cube_state.hpp  graph_engine.hpp  solver.hpp
src/: automaton_compiler.cpp  cli.cpp  graph_engine.cpp  main.cpp  solver.cpp
